# test_task_student_score_collector

./: .env.template  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_10_06_1207-e8483481e80c_create_tables.py  2025_10_07_1355-ccb104f7fbbd_.py  2025_10_07_1452-a844093a7679_.py  2025_10_07_1608-a4ab5c133b21_.py
app/: .env.template  __init__.py  base_model.py  config.py  database.py  logging_config.py  main.py  start_telegram_bot.py  start_vk_bot.py
app/alembic/: env.py
app/alembic/versions/: 2025_10_06_1207-e8483481e80c_create_tables.py  2025_10_06_1314-36c43176cbe2_create_tables2.py  2025_10_07_1355-ccb104f7fbbd_.py  2025_10_07_1452-a844093a7679_.py  2025_10_07_1608-a4ab5c133b21_.py  2025_10_08_1909-51807b8f22f5_.py  2025_10_08_1949-58294131704e_.py  2025_10_09_0004-dcd782df6e70_.py  2025_10_10_1341-f96ccdd36974_.py  2025_10_10_1613-433b48036d0c_.py  2025_10_13_2320-36c398b8c21f_.py
app/auth/: crud.py  routers.py  schemas.py  services.py
app/bot_telegram/: fsm_states.py  keyboards.py  main_start_bot.py  routers.py  start_telegram_bot.py
app/bot_telegram/routers/: enter_scores.py  register.py  start.py  view_scores.py
app/bot_telegram/services/: enter_scores.py  register.py  start.py  view_scores.py
app/bot_vk/: keyboards.py  middleware.py  start_vk_bot.py  states.py
app/bot_vk/handlers/: enter_scores.py  register.py  start.py  view_scores.py
app/bot_vk/services/: enter_scores.py  register.py  start.py  view_scores.py
app/scores/: crud.py  models.py  routers.py  schemas.py
app/users/: crud.py  models.py  routers.py  schemas.py
app/users/services/: hash_password.py
tests/: conftest.py  test_db.py
