[tool.poetry]
name = "test-task-student-score-collector"
version = "0.1.0"
description = ""
authors = ["Julia Bengert <yubengert@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.118.0"
uvicorn = {extras = ["standard"], version = "^0.37.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
